; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-orion5x/extr_pci.c_orion5x_pci_valid_config.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-orion5x/extr_pci.c_orion5x_pci_valid_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@orion5x_pci_cardbus_mode = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @orion5x_pci_valid_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @orion5x_pci_valid_config(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  %7 = call i32 (...) @orion5x_pci_local_bus_nr()
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %27

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = call i32 @PCI_SLOT(i32 %10)
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %18

13:                                               ; preds = %9
  %14 = load i32, i32* %5, align 4
  %15 = call i64 @PCI_FUNC(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %28

18:                                               ; preds = %13, %9
  %19 = load i64, i64* @orion5x_pci_cardbus_mode, align 8
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %26

21:                                               ; preds = %18
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @PCI_SLOT(i32 %22)
  %24 = icmp sgt i32 %23, 1
  br i1 %24, label %25, label %26

25:                                               ; preds = %21
  store i32 0, i32* %3, align 4
  br label %28

26:                                               ; preds = %21, %18
  br label %27

27:                                               ; preds = %26, %2
  store i32 1, i32* %3, align 4
  br label %28

28:                                               ; preds = %27, %25, %17
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @orion5x_pci_local_bus_nr(...) #1

declare dso_local i32 @PCI_SLOT(i32) #1

declare dso_local i64 @PCI_FUNC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
